# marty

./: .gitignore  AGENTS.md  Cargo.toml  README.md  keybinds.md
src/: config.rs  main.rs  matrix.rs  storage.rs
